force-app/main/default/objects/sugati__Holiday_Question__c/sugati__Holiday_Question__c.object-meta.xml
<CustomObject>
    <label>Preference</label>
    <nameField>
        <displayFormat>HEQ-{0000000}</displayFormat>
        <label>Holiday Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>