force-app/main/default/objects/sugati__Holiday_Question__c/fields/sugati__HQ_Account__c.field-meta.xml
<CustomField>
    <fullName>sugati__HQ_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Holiday_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>