force-app/main/default/objects/sugati__Holiday_Question__c/fields/sugati__HQ_Answer__c.field-meta.xml
<CustomField>
    <fullName>sugati__HQ_Answer__c</fullName>
    <label>Answer</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>