force-app/main/default/objects/sugati__Holiday_Question__c/fields/sugati__HQ_Answer_Time__c.field-meta.xml
<CustomField>
    <fullName>sugati__HQ_Answer_Time__c</fullName>
    <label>Answer Time</label>
    <length>5</length>
    <type>Text</type>
</CustomField>