force-app/main/default/objects/sugati__Holiday_Question__c/fields/sugati__HQ_Create_Task__c.field-meta.xml
<CustomField>
    <fullName>sugati__HQ_Create_Task__c</fullName>
    <formula>sugati__HQ_Question__r.sugati__Q_Task__c</formula>
    <label>Create Task</label>
    <type>Checkbox</type>
</CustomField>