force-app/main/default/objects/sugati__Holiday_Question__c/fields/sugati__HQ_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>sugati__HQ_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Holiday_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>