force-app/main/default/objects/sugati__Holiday_Question__c/fields/sugati__HQ_Other__c.field-meta.xml
<CustomField>
    <fullName>sugati__HQ_Other__c</fullName>
    <label>Other</label>
    <type>TextArea</type>
</CustomField>