force-app/main/default/objects/sugati__Holiday_Question__c/fields/sugati__HQ_OwnerID_F__c.field-meta.xml
<CustomField>
    <fullName>sugati__HQ_OwnerID_F__c</fullName>
    <formula>sugati__HQ_Opportunity__r.Owner.Id</formula>
    <label>OwnerID</label>
    <type>Text</type>
</CustomField>