force-app/main/default/objects/sugati__Holiday_Question__c/fields/sugati__HQ_Question__c.field-meta.xml
<CustomField>
    <fullName>sugati__HQ_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question</label>
    <referenceTo>sugati__Question__c</referenceTo>
    <relationshipName>Holiday_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>