force-app/main/default/objects/sugati__Holiday_Question__c/fields/sugati__HQ_Question_F__c.field-meta.xml
<CustomField>
    <fullName>sugati__HQ_Question_F__c</fullName>
    <formula>sugati__HQ_Question__r.sugati__Q_Question_Name__c</formula>
    <label>Question</label>
    <type>Text</type>
</CustomField>