force-app/main/default/objects/sugati__Holiday_Question__c/fields/sugati__S_HQ_Client_Group__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_HQ_Client_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Group</label>
    <referenceTo>sugati__Client_Group__c</referenceTo>
    <relationshipLabel>Preferences</relationshipLabel>
    <relationshipName>Preferences</relationshipName>
    <type>Lookup</type>
</CustomField>